[package]
name = "litmus"
version = "0.5.0"
description = "a macro-free BDD test harness."
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/NTDuck/litmus"
keywords = ["bdd", "test", "harness", "cucumber", "gherkin"]
categories = ["development-tools::testing"]
publish = true

[features]
default = ["libtest-mimic", "seahash", "triomphe"]
ahash = ["dep:ahash"]
fxhash = ["dep:fxhash"]
metrohash = ["dep:metrohash"]
libtest-mimic = ["dep:libtest-mimic"]
triomphe = ["dep:triomphe"]
seahash = ["dep:seahash"]

[dependencies]
ahash = { version = "0.8", optional = true }
bon = "3.7.1"
fxhash = { version = "0.2", optional = true }
libtest-mimic = { version = "0.8", optional = true }
metrohash = { version = "1.0.7", optional = true }
triomphe = { version = "0.1.14", optional = true }
sealed = "0.6.0"
seahash = { version = "4.1.0", optional = true }

[dev-dependencies]
speculoos = "0.13"

[lib]
test = false
doctest = false

[lints.rust]

[lints.clippy]
let_and_return = "allow"

[[example]]
name = "minimal"
path = "examples/minimal.rs"
harness = false
