[package]
name = "litmus"
version = "0.5.2"
description = "a macro-free BDD test harness."
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/NTDuck/litmus"
keywords = ["bdd", "test", "harness", "cucumber", "gherkin"]
categories = ["development-tools::testing"]
publish = true

[features]
default = ["natural", "libtest-mimic", "seahash", "num-cpus"]
natural = []
ahash = ["dep:ahash"]
fxhash = ["dep:fxhash"]
libtest-mimic = ["dep:libtest-mimic"]
metrohash = ["dep:metrohash"]
num-cpus = ["dep:num_cpus"]
seahash = ["dep:seahash"]
triomphe = ["dep:triomphe"]

[dependencies]
ahash = { version = "0.8.12", optional = true }
bon = "3.7.2"
fxhash = { version = "0.2.1", optional = true }
libtest-mimic = { version = "0.8", optional = true }
metrohash = { version = "1.0.7", optional = true }
num_cpus = { version = "1.17.0", optional = true }
seahash = { version = "4.1.0", optional = true }
sealed = "0.6.0"
triomphe = { version = "0.1.14", optional = true }

[dev-dependencies]
cucumber = "0.21.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[lib]
test = false
doctest = false

[lints.rust]

[lints.clippy]
let_and_return = "allow"

[[example]]
name = "hello-world"
path = "./examples/hello-world.rs"
harness = false

[[example]]
name = "hello-world-cucumber-rs"
path = "./examples/cucumber-rs/hello-world.rs"
harness = false
